tests/typing/fail/mangling-01.stderr
error: found type `int on c`, but a basic type was expected
 --> tests/typing/fail/mangling-01.rs:4:19
  |
4 |     node oui() = (a)
  |                   ^
